--- a/ProjectEclipse/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectEclipse/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,6 +164,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint
 InputAction=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 
 [/Script/LiveCoding.LiveCodingSettings]
 bEnabled=False
