--- a/ProjectEclipse/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectEclipse/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -336,7 +336,7 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Projectiles/BasicBullet
+ContentBrowserTab1.SelectedPaths=/Game/Magic
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -1851,10 +1851,16 @@ BakeToControlRigSettings="\"Object\" "
 FKControlRig="\"Object\" "
 StaticMeshSocket="\"Object\" "
 ModifierKeyTrigger="\"Object\" "
+MaterialExpressionSceneColor="\"Object\" "
+MaterialExpressionCameraPositionWS="\"Object\" "
+MaterialExpressionScreenPosition="\"Object\" "
+MaterialExpressionBumpOffset="\"Object\" "
+MaterialExpressionStaticBool="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
@@ -1884,7 +1890,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/Magic/blackHoleMat.blackHoleMat
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=False
@@ -3271,6 +3277,14 @@ TorchLauncher_C.Equipment=True
 FbxImportUI.Animation=True
 StaticMeshSocket.StaticMeshSocket=True
 ModifierKeyTrigger.Trigger Settings=True
+MaterialExpressionSceneColor.MaterialExpressionSceneColor=True
+MaterialExpressionSceneColor.MaterialExpression=True
+MaterialExpressionCameraPositionWS.MaterialExpression=True
+MaterialExpressionScreenPosition.MaterialExpression=True
+MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
+MaterialExpressionBumpOffset.MaterialExpression=True
+MaterialExpressionStaticBool.MaterialExpressionStaticBool=True
+MaterialExpressionStaticBool.MaterialExpression=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3286,36 +3300,36 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Projectiles/BasicBullet/BasicBullet
-MRUItem1=/Game/Weapons/TestRifle/sg553
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/Weapons/TestRifle/Material_001
-MRUItem4=/Game/Weapons/TestRifle/TestRifle
-MRUItem5=/Game/Weapons/TorchLauncher
-MRUItem6=/Game/Weapons/BasicPistol
-MRUItem7=/Game/ThirdPerson/Input/Actions/IA_SwitchEquipment
-MRUItem8=/Game/ThirdPerson/Input/IMC_Default
-MRUItem9=/Game/Magic/TestSigil
-MRUItem10=/Game/Magic/circle_01
-MRUItem11=/Game/Characters/Mannequins/Animations/Manny/MM_Idle
-MRUItem12=/Game/Characters/Mannequins/Animations/Manny/MM_Idle/Driving_MM_Idle
-MRUItem13=/Game/Weapons/BasicBullet_SemiAuto
-MRUItem14=/Game/ThirdPerson/Input/Actions/IA_AlternateUse
-MRUItem15=/Game/Weapons/Torch_SemiAuto
-MRUItem16=/Game/Weapons/BasicBullet_Burst
-MRUItem17=/Game/ThirdPerson/Input/Actions/IA_ToggleCam
-MRUItem18=/Game/ThirdPerson/Input/Actions/IA_SecondaryUse
-MRUItem19=/Game/ThirdPerson/Input/Actions/IA_PrimaryUse
-MRUItem20=/Game/Weapons/BasicSafety
-MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem22=/Game/Weapons/IA_CycleFirearmMode
-MRUItem23=/Game/Weapons/IMC_Firearm
-MRUItem24=/Game/Tests/TestProjectile
-MRUItem25=/Game/Projectiles/BasicBullet/BasicBulletMat
-MRUItem26=/Game/Tests/TestNiagara/TestSmoke
-MRUItem27=/Game/Tests/TestMat
-MRUItem28=/Game/Tests/TestSword/BroadSword1
-MRUItem29=/Game/StarterContent/Particles/Materials/M_smoke_subUV
+MRUItem0=/Game/Magic/blackHoleMat
+MRUItem1=/Game/Projectiles/BasicBullet/BasicBullet
+MRUItem2=/Game/Weapons/TestRifle/sg553
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/Weapons/TestRifle/Material_001
+MRUItem5=/Game/Weapons/TestRifle/TestRifle
+MRUItem6=/Game/Weapons/TorchLauncher
+MRUItem7=/Game/Weapons/BasicPistol
+MRUItem8=/Game/ThirdPerson/Input/Actions/IA_SwitchEquipment
+MRUItem9=/Game/ThirdPerson/Input/IMC_Default
+MRUItem10=/Game/Magic/TestSigil
+MRUItem11=/Game/Magic/circle_01
+MRUItem12=/Game/Characters/Mannequins/Animations/Manny/MM_Idle
+MRUItem13=/Game/Characters/Mannequins/Animations/Manny/MM_Idle/Driving_MM_Idle
+MRUItem14=/Game/Weapons/BasicBullet_SemiAuto
+MRUItem15=/Game/ThirdPerson/Input/Actions/IA_AlternateUse
+MRUItem16=/Game/Weapons/Torch_SemiAuto
+MRUItem17=/Game/Weapons/BasicBullet_Burst
+MRUItem18=/Game/ThirdPerson/Input/Actions/IA_ToggleCam
+MRUItem19=/Game/ThirdPerson/Input/Actions/IA_SecondaryUse
+MRUItem20=/Game/ThirdPerson/Input/Actions/IA_PrimaryUse
+MRUItem21=/Game/Weapons/BasicSafety
+MRUItem22=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem23=/Game/Weapons/IA_CycleFirearmMode
+MRUItem24=/Game/Weapons/IMC_Firearm
+MRUItem25=/Game/Tests/TestProjectile
+MRUItem26=/Game/Projectiles/BasicBullet/BasicBulletMat
+MRUItem27=/Game/Tests/TestNiagara/TestSmoke
+MRUItem28=/Game/Tests/TestMat
+MRUItem29=/Game/Tests/TestSword/BroadSword1
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint=1
@@ -3379,6 +3393,7 @@ MRUItem29=/Game/StarterContent/Particles/Materials/M_smoke_subUV
 /Game/Weapons/TestRifle/sg553.sg553=1
 /Game/Weapons/TestRifle/Material_001.Material_001=1
 /Game/Weapons/TestRifle/TestRifle.TestRifle=1
+/Game/Magic/blackHoleMat.blackHoleMat=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3903,4 +3918,5 @@ bConvertSceneUnit=False
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+Warning_CompileErrorsInMaterial=False
 
