Grip component c++ base

--- a/ProjectEclipseVR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectEclipseVR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -292,6 +292,10 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 EdGraph=EdGraph.Inputs.8C15198E4561BA345A9DA2A07790D43D
+GrabComponent_C=EdGraph.Inputs.8C15198E4561BA345A9DA2A07790D43D
+K2Node_VariableGet=EdGraph.Inputs.8C15198E4561BA345A9DA2A07790D43D
+PropertyWrapper=EdGraph.Inputs.8C15198E4561BA345A9DA2A07790D43D
+MulticastInlineDelegatePropertyWrapper=EdGraph.Inputs.8C15198E4561BA345A9DA2A07790D43D
 
 [EditorStartup]
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
@@ -378,6 +382,8 @@ ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/Entities
 ContentBrowserTab1.JumpMRU=/All/Game/VRTemplate/Input/Actions
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/VRTemplate/Blueprints/GrabType
@@ -1032,6 +1038,28 @@ LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.HLOD=True
 LightmassImportanceVolume.Networking=True
 LightmassImportanceVolume.Actor=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+K2Node_VariableGet.DefaultValueCategory=True
+GripComponent.Variable=True
+GripComponent.TransformCommon=True
+GripComponent.Sockets=True
+GripComponent.Components=True
+GripComponent.GripComponent=True
+GripComponent.ComponentTick=True
+GripComponent.Rendering=True
+GripComponent.Tags=True
+GripComponent.ComponentReplication=True
+GripComponent.Activation=True
+GripComponent.Cooking=True
+GripComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/VRTemplate/Input/PMI_VRTemplate.PMI_VRTemplate=1
@@ -1055,14 +1083,14 @@ PrimaryDataAsset="\"Object.Input.Input|PlayerMappable\" "
 DataAsset=
 Object=
 EntityComponent="\"Object.Stats.Attributes\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent=
 HOTRELOAD_EntityComponent_4="\"Object.Stats.Attributes\" \"Object.Tags.ComponentTags\" "
-GrabComponent_C="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+GrabComponent_C=
+SceneComponent=
 CameraComponent="\"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 MotionControllerComponent="\"Object.Tags.ComponentTags\" "
 ProjectileMovementComponent="\"Object.Tags.ComponentTags\" "
 MovementComponent="\"Object.Tags.ComponentTags\" "
@@ -1075,6 +1103,7 @@ SplineComponent="\"Object.Tags.ComponentTags\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+GripComponent="\"Object.Tags.ComponentTags\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1096,8 +1125,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -1127,7 +1156,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=629.000 Y=5.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2280,8 +2309,8 @@ Voice.TimeStamp=2024.05.02-05.05.08
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.05.02-05.04.28
 MovieSceneCapture.LastCompileMethod=Unknown
-ProjectEclipseVR.TimeStamp=2024.05.06-14.35.42
-ProjectEclipseVR.LastCompileMethod=External
+ProjectEclipseVR.TimeStamp=2024.05.07-07.28.57
+ProjectEclipseVR.LastCompileMethod=Runtime
 Concert.TimeStamp=2024.05.02-05.12.57
 Concert.LastCompileMethod=Unknown
 ConcertClient.TimeStamp=2024.05.02-05.12.57
@@ -2499,6 +2528,9 @@ Button.Behavior=False
 GameMapsSettings.DefaultModes=True
 Engine.DefaultClasses=False
 UserDefinedEnum.Enumerators=False
+GrabComponent_C.Default=True
+K2Node_VariableGet.Variable=False
+MulticastInlineDelegatePropertyWrapper.Variable=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
