grab rework prog
some rework added included secondary button interaction with grips (ie pressing trigger or button to fire event)

--- a/ProjectEclipseVR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ProjectEclipseVR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -471,8 +471,8 @@ AssetManagementBrowser.HiddenColumns=ManagedDiskSize
 AssetManagementBrowser.HiddenColumns=TotalUsage
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/VRTemplate/Blueprints/Pistol
-MRUItem1=/Game/Player/BP_VREntity_Character
+MRUItem0=/Game/Player/BP_VREntity_Character
+MRUItem1=/Game/VRTemplate/Blueprints/Pistol
 MRUItem2=/Game/Misc/Mat_RedTest
 MRUItem3=/Game/VRTemplate/Blueprints/VRGameMode
 MRUItem4=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
@@ -1780,9 +1780,9 @@ Blueprint.Interfaces=True
 BP_VREntity_Character_C.TransformCommon=False
 BP_VREntity_Character_C.Animation=False
 BP_VREntity_Character_C.Mesh=False
-BP_VREntity_Character_C.VR=True
+BP_VREntity_Character_C.VR=False
 BP_VREntity_Character_C.Tick=False
-BP_VREntity_Character_C.ComponentTick=False
+BP_VREntity_Character_C.ComponentTick=True
 BP_VREntity_Character_C.Input=True
 BP_VREntity_Character_C.VREntityCharacter=False
 BP_VREntity_Character_C.Physics=False
@@ -1905,24 +1905,24 @@ Pistol_C.Item=True
 PlayerMappableInputConfig="\"Object.Input.Input|PlayerMappable\" \"Object.Input.Input|PlayerMappable.Contexts\" "
 PrimaryDataAsset="\"Object.Input.Input|PlayerMappable\" \"Object.Input.Input|PlayerMappable.Contexts\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.Tags.ComponentTags\" "
+Object=
 EntityComponent="\"Object.Stats.Attributes\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent=
 HOTRELOAD_EntityComponent_4="\"Object.Stats.Attributes\" \"Object.Tags.ComponentTags\" "
 GrabComponent_C="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent=
 CameraComponent="\"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent=
+PrimitiveComponent=
 MotionControllerComponent="\"Object.Tags.ComponentTags\" "
 ProjectileMovementComponent="\"Object.Tags.ComponentTags\" "
 MovementComponent="\"Object.Tags.ComponentTags\" "
 SphereComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent=
 B_MannequinsXR_C="\"Object.Tags.ComponentTags\" "
-SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
-SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
 SplineComponent="\"Object.Tags.ComponentTags\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1953,7 +1953,7 @@ CapsuleComponent=
 BP_TestSword_C="\"Object.Item.Item|Equipment\" \"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" \"Object.Item.Item|Grips\" "
 Weapon="\"Object.Item.Item|Equipment\" \"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" \"Object.Item.Item|Grips\" "
 Equipment="\"Object.Item.Item|Equipment\" \"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" \"Object.Item.Item|Grips\" "
-Item="\"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" \"Object.Item.Item|Grips\" \"Object.Item.Item|Grips.Grips\" "
+Item="\"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" "
 VRCharacterMovementComponent="\"Object.Tags.ComponentTags\" "
 VRBaseCharacterMovementComponent="\"Object.Tags.ComponentTags\" "
 VRRootComponent="\"Object.Tags.ComponentTags\" "
@@ -1966,7 +1966,7 @@ HOTRELOAD_GripMotionControllerComponent_0="\"Object.Tags.ComponentTags\" "
 HOTRELOAD_GripMotionControllerComponent_1="\"Object.Tags.ComponentTags\" "
 HOTRELOAD_GripComponent_3="\"Object.Tags.ComponentTags\" "
 HOTRELOAD_GripMotionControllerComponent_4="\"Object.Tags.ComponentTags\" "
-Pistol_C="\"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" \"Object.Item.Item|Grips\" \"Object.Item.Item|Grips.Grips\" "
+Pistol_C="\"Object.Item.Item|Data\" \"Object.Item.Item|Wielder\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1988,8 +1988,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
